2025-08-28T00:51:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17282522292 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 462 1480 / 467 1486
* notice: next accum: outdated-unq outdated-all / unq all: 462 1480 / 468 1487
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-27]

2025-08-26T00:53:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17224721612 # 747
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 462 1480 / 466 1485
* notice: next accum: outdated-unq outdated-all / unq all: 462 1480 / 467 1486
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-25]

2025-08-22T00:52:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17142930789 # 743
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 462 1480 / 465 1484
* notice: next accum: outdated-unq outdated-all / unq all: 462 1480 / 466 1485
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-21]

2025-08-21T00:51:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17114032992 # 742