@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-28T00:51:04Z",
-  "count_outdated" : 1480,
-  "uniques_outdated" : 462,
+  "timestamp" : "2025-08-29T00:51:18Z",
+  "count_outdated" : 1483,
+  "uniques_outdated" : 464,
   "count" : 1487,
   "uniques" : 468,
   "views" : [
-    {
-      "timestamp": "2025-08-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-08-20T00:00:00Z",
       "count": 1,
