@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 4,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2025-08-14T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-08-20T00:00:00Z",
       "count": 1,
